# BMI-studying

./: README.md
week1/: week1.md
week1/qt_advanced/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
week1/qt_hello_world/: CMakeLists.txt  graphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
week1/tcp-hello-world/: tcp-hello-world.cpp
week2/change_to_customplot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  work.cpp
week2/eight_moving_line/: CMakeLists.txt  chartprocess.cpp  chartprocess.h  datareader.cpp  datareader.h  mainwindow.cpp  mainwindow.h
week2/moving_line/: CMakeLists.txt  datareader.cpp  datareader.h  main.cpp  mainwindow.cpp  mainwindow.h
week2/two_threads/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  work.h
